# Rust-Practice

./: .gitignore  README.md  test.txt
Chapter 02/: notes.md
Chapter 04/4.2 References and Borrowing/: notes.md
Chapter 05/5.1 Defining and Instantiating Structs/: notes.md
Chapter 05/5.2 & 5.3 An Example Program Using Structs/: notes.md
Chapter 09/9.3 To panic! or Not to panic!/: notes.md
Chapter 1.3/hello_cargo/: notes.md
Chapter 10.1/: notes.md
Chapter 10.1 & 10.2/: notes.md
Chapter 10/10.1 & 10.2 Generic Data Types and Traits/: notes.md
Chapter 10/10.3 Validating References with Lifetimes/: notes.md
Chapter 11.1/: notes.md
Chapter 11.3/: notes.md
Chapter 11/11.2 Controlling How Tests Are Run/: notes.md
Chapter 12/: notes.md
Chapter 13/13.2 Processing a Series of Items with Iterators/: notes.md
Chapter 14/14.2 Publishing a Crate to Crates.io/: notes.md
Chapter 14/14.2 Publishing a Crate to Crates.io/crate_documentation/: Cargo.toml
Chapter 14/14.2 Publishing a Crate to Crates.io/crate_documentation/src/: lib.rs
Chapter 18/18.3 Pattern Syntax/: notes.md
Chapter 3.1/: notes.md
Chapter 3.4/: notes.md
Chapter 3.5/: notes.md
Chapter 4.1/: notes.md
Chapter 4.3/: notes.md
Chapter 4.4/: notes.md
Chapter 5.2/: notes.md
Chapter 6.1/: notes.md
Chapter 6.2/: notes.md
Chapter 6.3 & 6.4/: notes.md
Chapter 7.1 & 7.2/: notes.md
Chapter 7.3/: notes.md
Chapter 7.4/: notes.md
Chapter 8.1/: notes.md
Chapter 8.2/: notes.md
Chapter 8.3/: notes.md
Chapter 9.1/: notes.md
Chapter 9.1 & 9.2/: notes.md
Chapter 9.3/: notes.md
(+105 files in other folders)
