# an example of metadata required for publishing a package
[package]
name = "crate_documentation"
version = "0.1.0"
edition = "2021"
description = "A crate that doesn't offer much really."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
